--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    implementation "com.github.parse-community.Parse-SDK-Android:parse:1.18.5"
     implementation 'com.github.parse-community.Parse-SDK-Android:parse:1.25.0'
     implementation "com.github.parse-community.Parse-SDK-Android:parse:3.0.0"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1' // for logging API calls to LogCat
@@ -52,6 +50,6 @@ dependencies {
     implementation "androidx.appcompat:appcompat:${appCompatVersion}"
     implementation "com.google.android.material:material:${designSupportVersion}"
     //Google Map
-    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
 
 }
